# lakeview

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  backend.c  backend.h  main.c  ota.c  ota.h  sensors.c  sensors.h  wifi.c
